--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.1
   velocity_x: ^3.3.0
   flutter_svg: ^1.0.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
